tests/paczka1/small_fuzzy/21036622.err
Error in line 1: v1k S568 50,2
Error in line 7: FBYV A713 63,3
Error in line 15: nuz S568 79,9
